<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="E_DCH_Error" Id="{31fcf5a3-5407-4a80-aefa-34cd8756143f}">
    <Declaration><![CDATA[TYPE E_DCH_Error :
(
	None,
	Unknown,
	MAX_E_DCH_Error
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>