<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="E_PlcSaberDHCState" Id="{ec6aec98-4c23-45cd-8506-d720d2c0eac6}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE E_PlcSaberDHCState :
(
	/// 0
	Init,
	/// 1
	WaitForJob,
	/// 2
	SendData,
	/// 3
	Acknowledge,
	/// 4
	Retry,
	/// 5
	Error,
	/// 6
	WaitChannelInit,
	/// 7
	ClearBufferBusy,
	/// 8
	ClearBufferDone,
	MAX_E_PlcSaberDHCStat
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>